
h3. 0.6.1 unreleased

* add 'Business Frontpage' theme from startbootstrap.com
* add 'Blog Home' theme from startbootstrap.com
* add 'Heroic Features' theme from startbootstrap.com
* add 'One Page Wonder' theme from startbootstrap.com
* add 'Round About' theme from startbootstrap.com
* add 'Small Business' theme from startbootstrap.com
* add 'The Big Picture' theme from startbootstrap.com

h3. 0.6.0 May 10, 2015

* add 'Bare' theme from startbootstrap.com

h3. 0.5.16 April 27, 2015

* 'before_filter' becomes 'before_action' for upcoming Rails 5.0

h3. 0.5.15 September 14, 2014

* generate a navlink for Upmin using the 'rails_layout' gem instead

h3. 0.5.14 September 14, 2014

* add generator for Upmin for an admin interface

h3. 0.5.13 August 27, 2014

* support 'rails-devise-roles' example application

h3. 0.5.12 August 14, 2014

* minor change to routes for OmniAuth user pages

h3. 0.5.11 July 13, 2014

* generate JavaScript for analytics

h3. 0.5.10 July 2, 2014

* don't generate a home page if it already exists
* generate routes for OmniAuth for users pages

h3. 0.5.9 June 30, 2014

* use new style routes syntax

h3. 0.5.8 June 26, 2014

* don't set routes for OmniAuth applications

h3. 0.5.7 June 26, 2014

* remove 'capture email' feature from rails-omniauth example application

h3. 0.5.6 June 19, 2014

* add files to integrate Pundit with OmniAuth

h3. 0.5.5 June 19, 2014

* don't generate 'users' pages when generating 'authorized' pages

h3. 0.5.4 June 19, 2014

* generate a home page to accompany the 'about' page
* replace 'lorem ipsum' with an informative description

h3. 0.5.3 June 17, 2014

* Devise permitted parameters moved to 'config/initializers/devise_permitted_parameters.rb'

h3. 0.5.2 June 14, 2014

* updated policy for Pundit example

h3. 0.5.1 June 13, 2014

* updated User controller and policy for Pundit example

h3. 0.5.0 June 6, 2014

* tests for Devise are now available in the rails_apps_testing gem (removed here)

h3. 0.4.9 June 5, 2014
